--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ javac.classpath=\
     ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.jfreechart-1.0.19-demo.jar}:\
     ${file.reference.mysql-connector-j-8.1.0.jar}
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked 
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
