Se agrego las dependencias necesarias para exportar los datos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,7 @@ file.reference.mysql-connector-j-8.1.0.jar=dependecias\\mysql-connector-j-8.1.0\
 file.reference.mysql-connector-j-8.1.0.jar-1=D\:\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.mysql-connector-j-8.1.0.jar-2=C:\\Users\\Gabriel Rivas\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.poi-3.16.jar=dependecias\\poi-3.16.jar
-file.reference.poi-5.2.3.jar=C:\\Users\\Gabriel Rivas\\Documents\\bibliotecas\\poi-bin-5.2.3\\poi-5.2.3.jar
+file.reference.poi-5.2.3.jar=dependecias\\poi-bin-5.2.3\\poi-5.2.3.jar
 file.reference.poi-excelant-3.16.jar=dependecias\\poi-excelant-3.16.jar
 file.reference.poi-ooxml-3.16.jar=dependecias\\poi-ooxml-3.16.jar
 file.reference.poi-ooxml-schemas-3.16.jar=dependecias\\poi-ooxml-schemas-3.16.jar
